--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
     header {
       background-color: #0d6efd;
-      color: white;
+      color: purple;
       padding: 2rem;
       text-align: center;
     }
