--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background-color: #f8f9fa;
     }
     header {
-      background-color: #0d6efd;
+      background-color: purple;
       color: purple;
       padding: 2rem;
       text-align: center;
